@@ -31,6 +31,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - reject a qchkpt request if checkpointing is not enabled for the job
   b - Mom should not send checkpoint name and time to server unless checkpoint
       was successful
+  b - fix so that running jobs that have a hold type and that fail on checkpoint
+      restart get deleted when qdel is used
 
 2.3.6
   b - change back to not sending status updates until we get cluster addr message
